test/error/union_unknown.gw
union
{
	unknown_type unknown_variable;
};
